schedule update for wide

--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#x61;il&#x74;&#x6f;&#x3a;&#x73;&#117;&#112;&#x70;&#111;&#x72;&#x74;&#64;&#x76;&#105;&#x76;&#97;r&#97;&#x64;&#x6f;&#46;&#x63;&#x6f;&#x6d;">&#x73;&#117;&#112;&#x70;&#111;&#x72;&#x74;&#64;&#x76;&#105;&#x76;&#97;r&#97;&#x64;&#x6f;&#46;&#x63;&#x6f;&#x6d;</a></li>
+<li>VivaRado <a href="&#109;&#x61;&#105;l&#x74;o&#58;&#115;&#x75;&#112;&#112;&#x6f;&#114;&#116;&#64;&#x76;&#x69;&#118;&#97;&#x72;&#x61;&#x64;&#x6f;&#46;&#99;o&#x6d;">&#115;&#x75;&#112;&#112;&#x6f;&#114;&#116;&#64;&#x76;&#x69;&#118;&#97;&#x72;&#x61;&#x64;&#x6f;&#46;&#99;o&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#97;&#x69;&#x6c;&#x74;&#111;&#58;&#x6d;&#106;&#108;&#x61;&#x67;&#x61;&#116;t&#x75;&#116;a&#64;&#x67;&#109;&#x61;&#105;&#x6c;&#46;&#99;&#x6f;&#109;">&#x6d;&#106;&#108;&#x61;&#x67;&#x61;&#116;t&#x75;&#116;a&#64;&#x67;&#109;&#x61;&#105;&#x6c;&#46;&#99;&#x6f;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#x61;i&#108;&#116;&#111;&#58;&#x6d;&#106;&#x6c;&#x61;&#x67;a&#x74;&#x74;&#x75;&#116;&#97;&#64;&#x67;&#x6d;&#x61;&#x69;&#108;.c&#111;&#109;">&#x6d;&#106;&#x6c;&#x61;&#x67;a&#x74;&#x74;&#x75;&#116;&#97;&#64;&#x67;&#x6d;&#x61;&#x69;&#108;.c&#111;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1726,7 +1726,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="m&#97;&#x69;l&#x74;&#x6f;:&#x73;&#117;&#112;&#112;&#111;&#114;&#x74;&#64;&#118;&#x69;&#118;&#97;&#114;&#x61;&#x64;&#x6f;&#46;&#99;&#x6f;m">&#x73;&#117;&#112;&#112;&#111;&#114;&#x74;&#64;&#118;&#x69;&#118;&#97;&#114;&#x61;&#x64;&#x6f;&#46;&#99;&#x6f;m</a></li>
+<li><a href="&#x6d;&#97;i&#x6c;&#x74;&#x6f;:&#x73;&#x75;p&#x70;&#x6f;&#114;&#x74;&#64;&#x76;&#x69;&#118;&#x61;&#114;&#x61;&#x64;&#111;&#46;&#x63;&#111;&#x6d;">&#x73;&#x75;p&#x70;&#x6f;&#114;&#x74;&#64;&#x76;&#x69;&#118;&#x61;&#114;&#x61;&#x64;&#111;&#46;&#x63;&#111;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
