--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.023 | 2019/09/07</title>
+		<title>VRD | Advent | 3.024 | 2019/09/07</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;a&#x69;&#x6c;&#116;&#111;&#58;&#x73;&#x75;&#x70;&#112;&#111;&#114;&#x74;&#64;&#x76;&#x69;&#118;a&#x72;&#97;&#x64;&#x6f;&#46;&#x63;&#111;&#109;">&#x73;&#x75;&#x70;&#112;&#111;&#114;&#x74;&#64;&#x76;&#x69;&#118;a&#x72;&#97;&#x64;&#x6f;&#46;&#x63;&#111;&#109;</a></li>
+<li>VivaRado <a href="&#x6d;&#97;&#x69;&#108;&#x74;&#111;&#58;&#x73;&#117;&#x70;&#112;&#111;&#114;&#116;&#x40;&#118;&#105;&#x76;&#x61;&#x72;&#97;&#x64;&#x6f;&#x2e;&#99;&#111;&#109;">&#x73;&#117;&#x70;&#112;&#111;&#114;&#116;&#x40;&#118;&#105;&#x76;&#x61;&#x72;&#97;&#x64;&#x6f;&#x2e;&#99;&#111;&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#97;i&#x6c;&#116;&#x6f;&#58;&#109;j&#x6c;&#97;&#103;&#x61;t&#116;&#117;&#116;&#97;&#64;&#103;ma&#x69;&#x6c;.&#99;&#x6f;&#x6d;">&#109;j&#x6c;&#97;&#103;&#x61;t&#116;&#117;&#116;&#97;&#64;&#103;ma&#x69;&#x6c;.&#99;&#x6f;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#97;&#105;l&#x74;&#x6f;&#x3a;&#x6d;&#x6a;&#x6c;&#x61;&#x67;&#x61;&#x74;&#116;u&#x74;&#97;&#x40;&#103;&#x6d;&#97;&#105;&#x6c;&#46;&#99;&#x6f;&#x6d;">&#x6d;&#x6a;&#x6c;&#x61;&#x67;&#x61;&#x74;&#116;u&#x74;&#97;&#x40;&#103;&#x6d;&#97;&#105;&#x6c;&#46;&#99;&#x6f;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1466,7 +1466,7 @@ ADV-0004-0007-0001 4 Master Extension:                              crit, des33,
         4 MaE MO 4 blk_it:                                          done, des79, after des77, 2d
     ADV-0004-0007-0001 MaE MG wd:                                         des34, after des79, 25d
         4 MaE MG 1 thn_wd:                                          done, des45, after des79, 7d
-        4 MaE MG 2 reg_wd:                                                des46, after des45, 10d
+        4 MaE MG 2 reg_wd:                                          done, des46, after des45, 10d
         4 MaE MG 3 bld_wd:                                                des47, after des46, 6d
         4 MaE MG 4 blk_wd:                                                des57, after des47, 6d
     ADV-0004-0007-0001 MaE MG wd_it:                                      des35, after des34, 8d
@@ -1726,7 +1726,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#x61;&#x69;&#108;&#116;&#111;&#58;&#x73;&#x75;p&#x70;&#x6f;&#114;&#116;&#x40;&#x76;&#105;&#118;&#x61;&#x72;&#x61;&#x64;&#111;&#x2e;&#99;&#x6f;&#x6d;">&#x73;&#x75;p&#x70;&#x6f;&#114;&#116;&#x40;&#x76;&#105;&#118;&#x61;&#x72;&#x61;&#x64;&#111;&#x2e;&#99;&#x6f;&#x6d;</a></li>
+<li><a href="&#x6d;&#x61;i&#x6c;&#116;&#x6f;&#x3a;&#115;&#117;p&#112;&#111;r&#x74;&#x40;&#x76;&#x69;v&#97;r&#97;&#100;&#x6f;&#46;&#99;&#111;&#109;">&#115;&#117;p&#112;&#111;r&#x74;&#x40;&#x76;&#x69;v&#97;r&#97;&#100;&#x6f;&#46;&#99;&#111;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
