--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.024 | 2019/09/07</title>
+		<title>VRD | Advent | 3.024 | 2019/10/06</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#97;&#x69;&#108;&#x74;&#111;&#58;&#x73;&#117;&#x70;&#112;&#111;&#114;&#116;&#x40;&#118;&#105;&#x76;&#x61;&#x72;&#97;&#x64;&#x6f;&#x2e;&#99;&#111;&#109;">&#x73;&#117;&#x70;&#112;&#111;&#114;&#116;&#x40;&#118;&#105;&#x76;&#x61;&#x72;&#97;&#x64;&#x6f;&#x2e;&#99;&#111;&#109;</a></li>
+<li>VivaRado <a href="m&#97;&#105;&#x6c;&#x74;&#x6f;&#x3a;&#x73;&#x75;&#x70;&#112;&#111;&#114;&#x74;&#64;&#118;&#105;&#x76;&#x61;&#114;&#x61;&#100;o&#x2e;c&#111;&#109;">&#x73;&#x75;&#x70;&#112;&#111;&#114;&#x74;&#64;&#118;&#105;&#x76;&#x61;&#114;&#x61;&#100;o&#x2e;c&#111;&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#97;&#105;l&#x74;&#x6f;&#x3a;&#x6d;&#x6a;&#x6c;&#x61;&#x67;&#x61;&#x74;&#116;u&#x74;&#97;&#x40;&#103;&#x6d;&#97;&#105;&#x6c;&#46;&#99;&#x6f;&#x6d;">&#x6d;&#x6a;&#x6c;&#x61;&#x67;&#x61;&#x74;&#116;u&#x74;&#97;&#x40;&#103;&#x6d;&#97;&#105;&#x6c;&#46;&#99;&#x6f;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#x61;&#105;&#x6c;&#x74;&#x6f;&#x3a;&#109;&#106;&#108;&#97;&#x67;a&#116;&#x74;&#x75;t&#x61;&#x40;gm&#x61;&#105;&#x6c;.&#99;&#x6f;&#x6d;">&#109;&#106;&#108;&#97;&#x67;a&#116;&#x74;&#x75;t&#x61;&#x40;gm&#x61;&#105;&#x6c;.&#99;&#x6f;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1464,13 +1464,13 @@ ADV-0004-0007-0001 4 Master Extension:                              crit, des33,
         4 MaE MO 4 blk:                                             done, des77, 2019-07-06, 2019-08-19
     ADV-0004-0007-0001 MaE MG blk_it:                               done, des78, after des77, 2d
         4 MaE MO 4 blk_it:                                          done, des79, after des77, 2d
-    ADV-0004-0007-0001 MaE MG wd:                                         des34, after des79, 25d
+    ADV-0004-0007-0001 MaE MG wd:                                         des34, after des79, 60d
         4 MaE MG 1 thn_wd:                                          done, des45, after des79, 7d
         4 MaE MG 2 reg_wd:                                          done, des46, after des45, 10d
-        4 MaE MG 3 bld_wd:                                                des47, after des46, 6d
+        4 MaE MG 3 bld_wd:                                          done, des47, after des46, 30d
         4 MaE MG 4 blk_wd:                                                des57, after des47, 6d
-    ADV-0004-0007-0001 MaE MG wd_it:                                      des35, after des34, 8d
-        4 MaE MG 1 reg_wd_it:                                             des48, after des34, 2d
+    ADV-0004-0007-0001 MaE MG wd_it:                                      des35, after des57, 8d
+        4 MaE MG 1 reg_wd_it:                                             des48, after des57, 2d
         4 MaE MG 2 thn_wd_it:                                             des49, after des48, 2d
         4 MaE MG 3 bld_wd_it:                                             des50, after des49, 2d
         4 MaE MG 4 blk_wd_it:                                             des51, after des50, 2d
@@ -1726,7 +1726,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#x61;i&#x6c;&#116;&#x6f;&#x3a;&#115;&#117;p&#112;&#111;r&#x74;&#x40;&#x76;&#x69;v&#97;r&#97;&#100;&#x6f;&#46;&#99;&#111;&#109;">&#115;&#117;p&#112;&#111;r&#x74;&#x40;&#x76;&#x69;v&#97;r&#97;&#100;&#x6f;&#46;&#99;&#111;&#109;</a></li>
+<li><a href="&#x6d;&#x61;&#105;&#x6c;&#116;&#x6f;&#58;&#115;&#117;&#112;&#112;&#111;&#x72;&#x74;&#x40;&#x76;&#x69;v&#x61;&#x72;a&#x64;&#111;&#x2e;&#x63;o&#x6d;">&#115;&#117;&#112;&#112;&#111;&#x72;&#x74;&#x40;&#x76;&#x69;v&#x61;&#x72;a&#x64;&#111;&#x2e;&#x63;o&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
