--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.024 | 2019/10/06</title>
+		<title>VRD | Advent | 3.025 | 2019/10/06</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="m&#97;&#105;&#x6c;&#x74;&#x6f;&#x3a;&#x73;&#x75;&#x70;&#112;&#111;&#114;&#x74;&#64;&#118;&#105;&#x76;&#x61;&#114;&#x61;&#100;o&#x2e;c&#111;&#109;">&#x73;&#x75;&#x70;&#112;&#111;&#114;&#x74;&#64;&#118;&#105;&#x76;&#x61;&#114;&#x61;&#100;o&#x2e;c&#111;&#109;</a></li>
+<li>VivaRado <a href="&#109;&#x61;&#105;&#108;&#x74;o&#x3a;&#x73;&#117;&#x70;&#x70;&#111;&#x72;&#x74;&#64;&#118;&#x69;&#118;&#97;&#114;&#97;&#100;&#x6f;&#x2e;c&#x6f;&#x6d;">&#x73;&#117;&#x70;&#x70;&#111;&#x72;&#x74;&#64;&#118;&#x69;&#118;&#97;&#114;&#97;&#100;&#x6f;&#x2e;c&#x6f;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#x61;&#105;&#x6c;&#x74;&#x6f;&#x3a;&#109;&#106;&#108;&#97;&#x67;a&#116;&#x74;&#x75;t&#x61;&#x40;gm&#x61;&#105;&#x6c;.&#99;&#x6f;&#x6d;">&#109;&#106;&#108;&#97;&#x67;a&#116;&#x74;&#x75;t&#x61;&#x40;gm&#x61;&#105;&#x6c;.&#99;&#x6f;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#97;&#x69;&#108;&#x74;&#x6f;:m&#106;&#108;&#97;&#103;&#x61;t&#x74;&#x75;&#x74;&#97;&#x40;&#x67;&#109;a&#105;&#108;&#46;c&#111;&#109;">m&#106;&#108;&#97;&#103;&#x61;t&#x74;&#x75;&#x74;&#97;&#x40;&#x67;&#109;a&#105;&#108;&#46;c&#111;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1726,7 +1726,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#x61;&#105;&#x6c;&#116;&#x6f;&#58;&#115;&#117;&#112;&#112;&#111;&#x72;&#x74;&#x40;&#x76;&#x69;v&#x61;&#x72;a&#x64;&#111;&#x2e;&#x63;o&#x6d;">&#115;&#117;&#112;&#112;&#111;&#x72;&#x74;&#x40;&#x76;&#x69;v&#x61;&#x72;a&#x64;&#111;&#x2e;&#x63;o&#x6d;</a></li>
+<li><a href="&#x6d;&#x61;&#105;&#x6c;&#116;&#x6f;&#58;&#115;&#117;&#x70;&#112;&#x6f;&#114;&#116;&#64;&#118;&#x69;v&#x61;&#114;&#97;&#x64;&#111;&#x2e;&#x63;&#x6f;&#109;">&#115;&#117;&#x70;&#112;&#x6f;&#114;&#116;&#64;&#118;&#x69;v&#x61;&#114;&#97;&#x64;&#111;&#x2e;&#x63;&#x6f;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
