--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.025 | 2019/10/06</title>
+		<title>VRD | Advent | 3.05 | 2019/11/23</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#x61;&#105;&#108;&#x74;o&#x3a;&#x73;&#117;&#x70;&#x70;&#111;&#x72;&#x74;&#64;&#118;&#x69;&#118;&#97;&#114;&#97;&#100;&#x6f;&#x2e;c&#x6f;&#x6d;">&#x73;&#117;&#x70;&#x70;&#111;&#x72;&#x74;&#64;&#118;&#x69;&#118;&#97;&#114;&#97;&#100;&#x6f;&#x2e;c&#x6f;&#x6d;</a></li>
+<li>VivaRado <a href="&#109;&#97;&#105;&#x6c;&#x74;&#111;&#x3a;&#x73;&#x75;&#x70;&#x70;&#x6f;&#x72;&#x74;&#64;&#x76;&#x69;&#118;&#x61;&#114;&#97;&#100;&#111;&#x2e;&#99;&#111;&#x6d;">&#x73;&#x75;&#x70;&#x70;&#x6f;&#x72;&#x74;&#64;&#x76;&#x69;&#118;&#x61;&#114;&#97;&#100;&#111;&#x2e;&#99;&#111;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#97;&#x69;&#108;&#x74;&#x6f;:m&#106;&#108;&#97;&#103;&#x61;t&#x74;&#x75;&#x74;&#97;&#x40;&#x67;&#109;a&#105;&#108;&#46;c&#111;&#109;">m&#106;&#108;&#97;&#103;&#x61;t&#x74;&#x75;&#x74;&#97;&#x40;&#x67;&#109;a&#105;&#108;&#46;c&#111;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#97;&#105;&#x6c;&#116;&#x6f;&#58;&#x6d;&#106;&#x6c;a&#103;&#97;&#x74;&#116;&#x75;&#x74;&#x61;&#x40;&#103;&#x6d;&#x61;&#105;&#x6c;&#x2e;&#x63;&#x6f;&#x6d;">&#x6d;&#106;&#x6c;a&#103;&#97;&#x74;&#116;&#x75;&#x74;&#x61;&#x40;&#103;&#x6d;&#x61;&#105;&#x6c;&#x2e;&#x63;&#x6f;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1395,6 +1395,10 @@ later you can export to Componentized UFOs.</p>
 
 <p>The planning is for alphabetic glyphs and does not include any calculation of additional glyphs of any form. We will have to review the progress and update accordingly. After the review of the plan and assignment of additional tasks for fulfilment of additional glyphs, kerning and arbitrary corrections, Advent∞4 will be available with Cyrillic at 18 Instances of Upright and Upright Wide, 18 Instances of Italic and Italic Wide, total of 36 Instances.</p>
 
+<p><strong>2019-11-23</strong>:</p>
+
+<p>We have just finished the main work on all the wide masters from thin, regular, bold and finaly black. This means that it is time for minor adjustments and iterations on these masters, after this we can conclude the work by generating the italics for those masters.</p>
+
 <pre><span></span><code class='codehilite mermaid'>gantt
 dateFormat  YYYY-MM-DD
 title Advent Schedule
@@ -1459,16 +1463,16 @@ ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29
 #
 section 4 Master Extension All Scripts
 
-ADV-0004-0007-0001 4 Master Extension:                              crit, des33, 2019-07-06, 12d
+ADV-0004-0007-0001 4 Master Extension:                              crit, des33, 2019-07-06, 150d
     ADV-0004-0007-0001 MaE MO:                                      done, des76, 2019-07-06, 2019-08-19
         4 MaE MO 4 blk:                                             done, des77, 2019-07-06, 2019-08-19
     ADV-0004-0007-0001 MaE MG blk_it:                               done, des78, after des77, 2d
         4 MaE MO 4 blk_it:                                          done, des79, after des77, 2d
-    ADV-0004-0007-0001 MaE MG wd:                                         des34, after des79, 60d
+    ADV-0004-0007-0001 MaE MG wd:                                   done, des34, after des79, 95d
         4 MaE MG 1 thn_wd:                                          done, des45, after des79, 7d
         4 MaE MG 2 reg_wd:                                          done, des46, after des45, 10d
         4 MaE MG 3 bld_wd:                                          done, des47, after des46, 30d
-        4 MaE MG 4 blk_wd:                                                des57, after des47, 6d
+        4 MaE MG 4 blk_wd:                                          done, des57, after des47, 48d
     ADV-0004-0007-0001 MaE MG wd_it:                                      des35, after des57, 8d
         4 MaE MG 1 reg_wd_it:                                             des48, after des57, 2d
         4 MaE MG 2 thn_wd_it:                                             des49, after des48, 2d
@@ -1655,6 +1659,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 <li>April 14 2019: Standalone repo for autokern in python3 and 2.</li>
 <li>April 27 2019: Plan for delivery of Advent 4</li>
 <li>April 29 2019: ADV-0003-0008-0001-0001 SeC MO 1 reg</li>
+<li>November 23 2019: ADV-0004-0007-0001 MaE MG wd</li>
 </ul>
 
 <hr />
@@ -1726,7 +1731,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#x61;&#105;&#x6c;&#116;&#x6f;&#58;&#115;&#117;&#x70;&#112;&#x6f;&#114;&#116;&#64;&#118;&#x69;v&#x61;&#114;&#97;&#x64;&#111;&#x2e;&#x63;&#x6f;&#109;">&#115;&#117;&#x70;&#112;&#x6f;&#114;&#116;&#64;&#118;&#x69;v&#x61;&#114;&#97;&#x64;&#111;&#x2e;&#x63;&#x6f;&#109;</a></li>
+<li><a href="&#x6d;&#97;&#x69;&#x6c;&#x74;&#111;&#58;&#115;&#117;&#x70;&#x70;&#x6f;&#x72;&#116;&#64;&#x76;&#x69;&#x76;&#97;&#x72;&#x61;&#100;&#x6f;&#x2e;&#x63;&#x6f;&#109;">&#115;&#117;&#x70;&#x70;&#x6f;&#x72;&#116;&#64;&#x76;&#x69;&#x76;&#97;&#x72;&#x61;&#100;&#x6f;&#x2e;&#x63;&#x6f;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
