--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#97;&#105;&#x6c;&#x74;&#111;&#x3a;&#x73;&#x75;&#x70;&#x70;&#x6f;&#x72;&#x74;&#64;&#x76;&#x69;&#118;&#x61;&#114;&#97;&#100;&#111;&#x2e;&#99;&#111;&#x6d;">&#x73;&#x75;&#x70;&#x70;&#x6f;&#x72;&#x74;&#64;&#x76;&#x69;&#118;&#x61;&#114;&#97;&#100;&#111;&#x2e;&#99;&#111;&#x6d;</a></li>
+<li>VivaRado <a href="&#x6d;&#97;&#105;&#108;&#x74;&#x6f;:&#115;&#x75;&#112;&#x70;&#111;&#x72;&#116;&#64;&#118;&#x69;&#118;&#97;&#114;&#97;&#100;&#111;.&#x63;&#111;&#109;">&#115;&#x75;&#112;&#x70;&#111;&#x72;&#116;&#64;&#118;&#x69;&#118;&#97;&#114;&#97;&#100;&#111;.&#x63;&#111;&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#97;&#105;&#x6c;&#116;&#x6f;&#58;&#x6d;&#106;&#x6c;a&#103;&#97;&#x74;&#116;&#x75;&#x74;&#x61;&#x40;&#103;&#x6d;&#x61;&#105;&#x6c;&#x2e;&#x63;&#x6f;&#x6d;">&#x6d;&#106;&#x6c;a&#103;&#97;&#x74;&#116;&#x75;&#x74;&#x61;&#x40;&#103;&#x6d;&#x61;&#105;&#x6c;&#x2e;&#x63;&#x6f;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#97;&#x69;&#108;t&#111;&#58;&#109;&#x6a;&#x6c;&#97;&#103;&#x61;&#x74;&#116;&#117;&#x74;&#x61;&#64;&#103;&#x6d;&#97;&#105;&#x6c;&#x2e;c&#111;m">&#109;&#x6a;&#x6c;&#97;&#103;&#x61;&#x74;&#116;&#117;&#x74;&#x61;&#64;&#103;&#x6d;&#97;&#105;&#x6c;&#x2e;c&#111;m</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1397,7 +1397,7 @@ later you can export to Componentized UFOs.</p>
 
 <p><strong>2019-11-23</strong>:</p>
 
-<p>We have just finished the main work on all the wide masters from thin, regular, bold and finaly black. This means that it is time for minor adjustments and iterations on these masters, after this we can conclude the work by generating the italics for those masters.</p>
+<p>We have just finished the main work on all the wide masters from thin, regular, bold and finally black. This means that it is time for minor adjustments and iterations on these masters, after this we can conclude the work by generating the italics for those masters.</p>
 
 <pre><span></span><code class='codehilite mermaid'>gantt
 dateFormat  YYYY-MM-DD
@@ -1731,7 +1731,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#97;&#x69;&#x6c;&#x74;&#111;&#58;&#115;&#117;&#x70;&#x70;&#x6f;&#x72;&#116;&#64;&#x76;&#x69;&#x76;&#97;&#x72;&#x61;&#100;&#x6f;&#x2e;&#x63;&#x6f;&#109;">&#115;&#117;&#x70;&#x70;&#x6f;&#x72;&#116;&#64;&#x76;&#x69;&#x76;&#97;&#x72;&#x61;&#100;&#x6f;&#x2e;&#x63;&#x6f;&#109;</a></li>
+<li><a href="&#109;&#x61;&#x69;&#x6c;&#x74;&#111;&#58;&#115;&#117;&#112;&#112;&#111;&#x72;&#x74;&#x40;&#x76;&#105;&#118;&#x61;&#114;&#x61;&#100;&#x6f;&#46;&#x63;&#111;m">&#115;&#117;&#112;&#112;&#111;&#x72;&#x74;&#x40;&#x76;&#105;&#118;&#x61;&#114;&#x61;&#100;&#x6f;&#46;&#x63;&#111;m</a></li>
 </ul></li>
 </ul></li>
 </ul>
