--- a/README/README.html
+++ b/README/README.html
@@ -21,7 +21,7 @@
 
 <p><strong>Advent</strong> is a project of <strong>VivaRado</strong>, thanks goes to all the contributors, <strong>Google Fonts</strong> and all the people who use it!</p>
 
-<p><img src="assets/media/adventprovar2020.gif" alt="Screenshot" /></p>
+<p><img src="assets/media/adventprovar_2020.gif" alt="Screenshot" /></p>
 
 <div class="sidebar">
 
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="ma&#x69;&#108;&#116;&#x6f;&#58;&#x73;&#x75;p&#112;&#111;&#x72;&#x74;&#x40;&#x76;&#105;&#118;&#97;&#114;&#97;&#x64;&#x6f;&#46;&#99;&#x6f;&#109;">&#x73;&#x75;p&#112;&#111;&#x72;&#x74;&#x40;&#x76;&#105;&#118;&#97;&#114;&#97;&#x64;&#x6f;&#46;&#99;&#x6f;&#109;</a></li>
+<li>VivaRado <a href="&#x6d;&#x61;i&#x6c;&#116;&#111;&#x3a;&#x73;&#x75;&#x70;&#x70;&#x6f;&#x72;&#116;&#x40;&#x76;&#x69;&#118;&#97;r&#x61;&#x64;o.&#x63;o&#x6d;">&#x73;&#x75;&#x70;&#x70;&#x6f;&#x72;&#116;&#x40;&#x76;&#x69;&#118;&#97;r&#x61;&#x64;o.&#x63;o&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;a&#105;&#x6c;&#x74;&#111;&#x3a;&#109;&#106;&#108;&#97;&#x67;a&#x74;&#116;&#117;&#x74;&#x61;&#64;&#x67;&#x6d;&#97;&#x69;&#x6c;&#46;&#99;&#x6f;m">&#109;&#106;&#108;&#97;&#x67;a&#x74;&#116;&#117;&#x74;&#x61;&#64;&#x67;&#x6d;&#97;&#x69;&#x6c;&#46;&#99;&#x6f;m</a></li>
+<li>Michael LaGattuta <a href="&#109;a&#x69;&#x6c;&#116;&#x6f;&#x3a;&#x6d;&#x6a;&#108;&#97;&#x67;&#x61;&#x74;&#116;&#x75;&#116;&#x61;&#x40;&#x67;&#109;a&#105;l&#x2e;&#99;&#x6f;&#x6d;">&#x6d;&#x6a;&#108;&#97;&#x67;&#x61;&#x74;&#116;&#x75;&#116;&#x61;&#x40;&#x67;&#109;a&#105;l&#x2e;&#99;&#x6f;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1815,7 +1815,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#97;&#x69;&#108;&#x74;&#x6f;&#58;&#115;&#x75;&#112;&#x70;o&#114;&#x74;&#64;v&#105;&#118;&#97;&#x72;&#97;&#100;&#111;&#46;&#99;&#111;&#x6d;">&#115;&#x75;&#112;&#x70;o&#114;&#x74;&#64;v&#105;&#118;&#97;&#x72;&#97;&#100;&#111;&#46;&#99;&#111;&#x6d;</a></li>
+<li><a href="m&#97;&#x69;&#108;&#116;&#x6f;&#58;&#x73;&#117;&#112;&#112;&#111;&#114;&#x74;&#x40;&#118;&#x69;&#118;&#x61;&#114;&#97;&#100;&#111;&#x2e;&#99;&#111;m">&#x73;&#117;&#112;&#112;&#111;&#114;&#x74;&#x40;&#118;&#x69;&#118;&#x61;&#114;&#97;&#100;&#111;&#x2e;&#99;&#111;m</a></li>
 </ul></li>
 </ul></li>
 </ul>
