--- a/README/README.html
+++ b/README/README.html
@@ -120,16 +120,16 @@
 
 <h2><strong>Introduction</strong></h2>
 
-<p>Advent Pro is a modern display typeface, designed in 2007, this is the new version (#3.001 of 2019) that is delivered as a variable font, along with the classic formats. It supports 14 weights including italics. It is currently maintained and released by VivaRado, by it's original designer Andreas Kalpakidis. What is unique about this version is that thanks to the strict requirements of the Variable Format, all the glyph contours have been reworked, with amazing attention to quality. Then we compressed the kerning to a great degree making the font superbly kerned and compact at the same time.</p>
+<p>Advent Pro is a modern display typeface, designed in 2007, this is the new version (4 of 2019-2020) that is delivered as a variable font, along with the classic formats. It supports 14 weights including italics. It is currently maintained and released by VivaRado, by it's original designer Andreas Kalpakidis. What is unique about this version is that thanks to the strict requirements of the Variable Format, all the glyph contours have been reworked, with amazing attention to quality. Then we compressed the kerning to a great degree making the font superbly kerned and compact at the same time.</p>
 
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#x61;i&#x6c;&#116;&#111;&#x3a;&#x73;&#x75;&#x70;&#x70;&#x6f;&#x72;&#116;&#x40;&#x76;&#x69;&#118;&#97;r&#x61;&#x64;o.&#x63;o&#x6d;">&#x73;&#x75;&#x70;&#x70;&#x6f;&#x72;&#116;&#x40;&#x76;&#x69;&#118;&#97;r&#x61;&#x64;o.&#x63;o&#x6d;</a></li>
+<li>VivaRado <a href="&#109;&#97;&#x69;l&#116;&#111;&#x3a;&#115;&#117;&#x70;&#112;&#111;&#114;&#116;&#x40;&#118;&#105;v&#97;&#x72;&#x61;&#x64;&#111;&#46;&#99;&#x6f;&#x6d;">&#115;&#117;&#x70;&#112;&#111;&#114;&#116;&#x40;&#118;&#105;v&#97;&#x72;&#x61;&#x64;&#111;&#46;&#99;&#x6f;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;a&#x69;&#x6c;&#116;&#x6f;&#x3a;&#x6d;&#x6a;&#108;&#97;&#x67;&#x61;&#x74;&#116;&#x75;&#116;&#x61;&#x40;&#x67;&#109;a&#105;l&#x2e;&#99;&#x6f;&#x6d;">&#x6d;&#x6a;&#108;&#97;&#x67;&#x61;&#x74;&#116;&#x75;&#116;&#x61;&#x40;&#x67;&#109;a&#105;l&#x2e;&#99;&#x6f;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;a&#x69;&#x6c;&#x74;&#x6f;&#58;&#x6d;&#x6a;&#x6c;a&#103;&#97;&#116;&#x74;&#117;&#x74;&#x61;&#x40;&#x67;&#x6d;&#97;&#105;&#x6c;.&#99;o&#x6d;">&#x6d;&#x6a;&#x6c;a&#103;&#97;&#116;&#x74;&#117;&#x74;&#x61;&#x40;&#x67;&#x6d;&#97;&#105;&#x6c;.&#99;o&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1815,7 +1815,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="m&#97;&#x69;&#108;&#116;&#x6f;&#58;&#x73;&#117;&#112;&#112;&#111;&#114;&#x74;&#x40;&#118;&#x69;&#118;&#x61;&#114;&#97;&#100;&#111;&#x2e;&#99;&#111;m">&#x73;&#117;&#112;&#112;&#111;&#114;&#x74;&#x40;&#118;&#x69;&#118;&#x61;&#114;&#97;&#100;&#111;&#x2e;&#99;&#111;m</a></li>
+<li><a href="&#x6d;&#97;&#x69;&#108;&#116;&#111;&#x3a;&#x73;&#x75;&#x70;&#x70;&#x6f;&#x72;&#116;&#x40;&#118;&#x69;&#118;&#x61;&#114;&#97;&#100;&#x6f;&#46;&#x63;&#x6f;&#109;">&#x73;&#x75;&#x70;&#x70;&#x6f;&#x72;&#116;&#x40;&#118;&#x69;&#118;&#x61;&#114;&#97;&#100;&#x6f;&#46;&#x63;&#x6f;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
