Doc update optical

--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.50 | 2019/12/02</title>
+		<title>VRD | Advent | 3.51 | 2019/12/08</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#97;&#x69;l&#116;&#111;&#x3a;&#115;&#117;&#x70;&#112;&#111;&#114;&#116;&#x40;&#118;&#105;v&#97;&#x72;&#x61;&#x64;&#111;&#46;&#99;&#x6f;&#x6d;">&#115;&#117;&#x70;&#112;&#111;&#114;&#116;&#x40;&#118;&#105;v&#97;&#x72;&#x61;&#x64;&#111;&#46;&#99;&#x6f;&#x6d;</a></li>
+<li>VivaRado <a href="&#x6d;&#x61;i&#108;t&#111;&#x3a;&#115;&#117;&#x70;&#x70;&#x6f;&#x72;&#116;&#64;viv&#x61;&#114;&#97;&#100;&#x6f;&#46;&#99;o&#x6d;">&#115;&#117;&#x70;&#x70;&#x6f;&#x72;&#116;&#64;viv&#x61;&#114;&#97;&#100;&#x6f;&#46;&#99;o&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;a&#x69;&#x6c;&#x74;&#x6f;&#58;&#x6d;&#x6a;&#x6c;a&#103;&#97;&#116;&#x74;&#117;&#x74;&#x61;&#x40;&#x67;&#x6d;&#97;&#105;&#x6c;.&#99;o&#x6d;">&#x6d;&#x6a;&#x6c;a&#103;&#97;&#116;&#x74;&#117;&#x74;&#x61;&#x40;&#x67;&#x6d;&#97;&#105;&#x6c;.&#99;o&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#97;&#x69;&#x6c;&#x74;&#x6f;&#58;m&#x6a;&#108;&#97;&#103;&#x61;&#116;&#x74;&#x75;&#x74;&#x61;&#x40;g&#109;&#x61;&#105;&#108;&#46;&#99;om">m&#x6a;&#108;&#97;&#103;&#x61;&#116;&#x74;&#x75;&#x74;&#x61;&#x40;g&#109;&#x61;&#105;&#108;&#46;&#99;om</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -980,6 +980,43 @@
 
 <hr />
 
+<h4>Optical Axis</h4>
+
+<p>The masters have been set as follows:</p>
+
+<table>
+<thead>
+<tr>
+  <th>masters</th>
+  <th>pt</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+  <td>thn</td>
+  <td>170</td>
+</tr>
+<tr>
+  <td>reg</td>
+  <td>55</td>
+</tr>
+<tr>
+  <td>bld</td>
+  <td>28</td>
+</tr>
+<tr>
+  <td>blk</td>
+  <td>17</td>
+</tr>
+</tbody>
+</table>
+
+<p><img src="assets/media/advent_optical.svg" alt="adv_opsz" /></p>
+
+<p>image: #003, 0.001, svg, Advent Optical Size Axis (opsz), chart.</p>
+
+<hr />
+
 <h3><strong>Introduction / Phase Introduction / Planning Phase / Safe Planning / Project Plan / Kerning</strong></h3>
 
 <p>With the help of Typefacet Integrated Autokern, we have obtained the first layer of kerning for the upright bold.
@@ -1282,6 +1319,13 @@ defcon==0.6.0
 <ul>
 <li>Thin through Black, Normal through Expanded Width, Non Italic through Italic.</li>
 <li>Weight axes, Italic axes and Width axes.</li>
+</ul></li>
+<li><p><strong>weight,width,ital,opsz <a href="https://github.com/VivaRado/Advent/blob/master/font_source/UFOs/latest/adv_wght_wdth_ital_opsz.designspace">adv4_wght_wdth_ital_opsz</a></strong></p>
+
+<ul>
+<li>Thin through Black, Normal through Expanded Width, Non Italic through Italic.</li>
+<li>Weight axes, Italic axes and Width axes.</li>
+<li>Optical Size</li>
 </ul></li>
 </ul></li>
 <li><p>Preset:</p>
@@ -1815,7 +1859,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#97;&#x69;&#108;&#116;&#111;&#x3a;&#x73;&#x75;&#x70;&#x70;&#x6f;&#x72;&#116;&#x40;&#118;&#x69;&#118;&#x61;&#114;&#97;&#100;&#x6f;&#46;&#x63;&#x6f;&#109;">&#x73;&#x75;&#x70;&#x70;&#x6f;&#x72;&#116;&#x40;&#118;&#x69;&#118;&#x61;&#114;&#97;&#100;&#x6f;&#46;&#x63;&#x6f;&#109;</a></li>
+<li><a href="&#x6d;&#x61;&#x69;&#x6c;&#x74;&#x6f;&#x3a;&#115;&#117;&#x70;&#x70;&#x6f;&#114;&#116;&#x40;&#118;&#105;&#118;&#x61;&#114;&#x61;&#100;&#x6f;.&#x63;&#x6f;&#109;">&#115;&#117;&#x70;&#x70;&#x6f;&#114;&#116;&#x40;&#118;&#105;&#118;&#x61;&#114;&#x61;&#100;&#x6f;.&#x63;&#x6f;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
