--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.51 | 2019/12/08</title>
+		<title>VRD | Advent | 4.001 | 2021/02/10</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#x61;i&#108;t&#111;&#x3a;&#115;&#117;&#x70;&#x70;&#x6f;&#x72;&#116;&#64;viv&#x61;&#114;&#97;&#100;&#x6f;&#46;&#99;o&#x6d;">&#115;&#117;&#x70;&#x70;&#x6f;&#x72;&#116;&#64;viv&#x61;&#114;&#97;&#100;&#x6f;&#46;&#99;o&#x6d;</a></li>
+<li>VivaRado <a href="m&#97;&#105;&#108;t&#111;&#x3a;&#115;&#117;&#112;&#112;&#x6f;&#x72;&#x74;&#x40;&#x76;&#105;&#x76;&#x61;&#114;&#97;&#100;&#111;&#46;&#x63;&#x6f;&#x6d;">&#115;&#117;&#112;&#112;&#x6f;&#x72;&#x74;&#x40;&#x76;&#105;&#x76;&#x61;&#114;&#97;&#100;&#111;&#46;&#x63;&#x6f;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#97;&#x69;&#x6c;&#x74;&#x6f;&#58;m&#x6a;&#108;&#97;&#103;&#x61;&#116;&#x74;&#x75;&#x74;&#x61;&#x40;g&#109;&#x61;&#105;&#108;&#46;&#99;om">m&#x6a;&#108;&#97;&#103;&#x61;&#116;&#x74;&#x75;&#x74;&#x61;&#x40;g&#109;&#x61;&#105;&#108;&#46;&#99;om</a></li>
+<li>Michael LaGattuta <a href="&#109;&#97;&#x69;&#108;&#116;&#111;&#58;&#x6d;&#x6a;&#x6c;&#x61;&#103;a&#x74;&#116;&#117;t&#x61;&#64;&#x67;&#109;&#97;i&#108;&#x2e;&#x63;&#x6f;m">&#x6d;&#x6a;&#x6c;&#x61;&#103;a&#x74;&#116;&#117;t&#x61;&#64;&#x67;&#109;&#97;i&#108;&#x2e;&#x63;&#x6f;m</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -661,7 +661,135 @@
 </tbody>
 </table>
 
-<h4>Instances</h4>
+<h4>Standard Instances</h4>
+
+<table>
+<thead>
+<tr>
+  <th>acro</th>
+  <th>weight</th>
+  <th>name</th>
+  <th>master</th>
+  <th>version</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+  <td>thn</td>
+  <td>100</td>
+  <td>Thin (Hairline)</td>
+  <td>MO</td>
+  <td>3.000</td>
+</tr>
+<tr>
+  <td>reg</td>
+  <td>400</td>
+  <td>Regular</td>
+  <td>MO</td>
+  <td>3.000</td>
+</tr>
+<tr>
+  <td>bld</td>
+  <td>700</td>
+  <td>Bold</td>
+  <td>MO</td>
+  <td>3.000</td>
+</tr>
+<tr>
+  <td>blk</td>
+  <td>900</td>
+  <td>Black (Heavy)</td>
+  <td>MO</td>
+  <td><strong>4.000</strong></td>
+</tr>
+<tr>
+  <td>thn-wd</td>
+  <td>100</td>
+  <td>Expanded Thin (Hairline)</td>
+  <td>MG</td>
+  <td><strong>4.000</strong></td>
+</tr>
+<tr>
+  <td>reg-wd</td>
+  <td>400</td>
+  <td>Expanded Regular</td>
+  <td>MG</td>
+  <td><strong>4.000</strong></td>
+</tr>
+<tr>
+  <td>bld-wd</td>
+  <td>700</td>
+  <td>Expanded Bold</td>
+  <td>MG</td>
+  <td><strong>4.000</strong></td>
+</tr>
+<tr>
+  <td>blk-wd</td>
+  <td>900</td>
+  <td>Expanded Black (Heavy)</td>
+  <td>MG</td>
+  <td><strong>4.000</strong></td>
+</tr>
+<tr>
+  <td>thn-it</td>
+  <td>100</td>
+  <td>Italic Thin (Hairline)</td>
+  <td>MG</td>
+  <td>3.000</td>
+</tr>
+<tr>
+  <td>reg-it</td>
+  <td>400</td>
+  <td>Italic Regular</td>
+  <td>MG</td>
+  <td>3.000</td>
+</tr>
+<tr>
+  <td>bld-it</td>
+  <td>700</td>
+  <td>Italic Bold</td>
+  <td>MG</td>
+  <td>3.000</td>
+</tr>
+<tr>
+  <td>blk-it</td>
+  <td>900</td>
+  <td>Black (Heavy)</td>
+  <td>MG</td>
+  <td><strong>4.000</strong></td>
+</tr>
+<tr>
+  <td>thn-wd-it</td>
+  <td>100</td>
+  <td>Expanded Italic Thin (Hairline)</td>
+  <td>MG</td>
+  <td><strong>4.000</strong></td>
+</tr>
+<tr>
+  <td>reg-wd-it</td>
+  <td>400</td>
+  <td>Expanded Italic Regular</td>
+  <td>MG</td>
+  <td><strong>4.000</strong></td>
+</tr>
+<tr>
+  <td>bld-wd-it</td>
+  <td>700</td>
+  <td>Expanded Italic Bold</td>
+  <td>MG</td>
+  <td><strong>4.000</strong></td>
+</tr>
+<tr>
+  <td>blk-wd-it</td>
+  <td>900</td>
+  <td>Expanded Black (Heavy)</td>
+  <td>MG</td>
+  <td><strong>4.000</strong></td>
+</tr>
+</tbody>
+</table>
+
+<h4>Extended Instances</h4>
 
 <table>
 <thead>
@@ -686,14 +814,14 @@
   <td>200</td>
   <td>Extra Light (Ultra Light)</td>
   <td>MA</td>
-  <td>3.000</td>
+  <td><strong>4.001</strong></td>
 </tr>
 <tr>
   <td>lgt</td>
   <td>300</td>
   <td>Light</td>
   <td>MA</td>
-  <td>3.000</td>
+  <td><strong>4.001</strong></td>
 </tr>
 <tr>
   <td>reg</td>
@@ -707,14 +835,14 @@
   <td>500</td>
   <td>Medium</td>
   <td>MA</td>
-  <td>3.000</td>
+  <td><strong>4.001</strong></td>
 </tr>
 <tr>
   <td>smb</td>
   <td>600</td>
   <td>Semi Bold (Demi Bold)</td>
   <td>MA</td>
-  <td>3.000</td>
+  <td><strong>4.001</strong></td>
 </tr>
 <tr>
   <td>bld</td>
@@ -728,7 +856,7 @@
   <td>800</td>
   <td>Extra Bold (Ultra Bold)</td>
   <td>MA</td>
-  <td>3.000</td>
+  <td><strong>4.001</strong></td>
 </tr>
 <tr>
   <td>blk</td>
@@ -740,63 +868,63 @@
 <tr>
   <td>thn-wd</td>
   <td>100</td>
-  <td>Thin (Hairline)</td>
+  <td>Expanded Thin (Hairline)</td>
   <td>MG</td>
   <td><strong>4.000</strong></td>
 </tr>
 <tr>
   <td>xlg-wd</td>
   <td>200</td>
-  <td>Extra Light (Ultra Light)</td>
+  <td>Expanded Extra Light (Ultra Light)</td>
   <td>MA</td>
-  <td>3.000</td>
+  <td><strong>4.001</strong></td>
 </tr>
 <tr>
   <td>lgt-wd</td>
   <td>300</td>
-  <td>Light</td>
+  <td>Expanded Light</td>
   <td>MA</td>
-  <td>3.000</td>
+  <td><strong>4.001</strong></td>
 </tr>
 <tr>
   <td>reg-wd</td>
   <td>400</td>
-  <td>Regular</td>
+  <td>Expanded Regular</td>
   <td>MG</td>
   <td><strong>4.000</strong></td>
 </tr>
 <tr>
   <td>med-wd</td>
   <td>500</td>
-  <td>Medium</td>
+  <td>Expanded Medium</td>
   <td>MA</td>
-  <td>3.000</td>
+  <td><strong>4.001</strong></td>
 </tr>
 <tr>
   <td>smb-wd</td>
   <td>600</td>
-  <td>Semi Bold (Demi Bold)</td>
+  <td>Expanded Semi Bold (Demi Bold)</td>
   <td>MA</td>
-  <td>3.000</td>
+  <td><strong>4.001</strong></td>
 </tr>
 <tr>
   <td>bld-wd</td>
   <td>700</td>
-  <td>Bold</td>
+  <td>Expanded Bold</td>
   <td>MG</td>
   <td><strong>4.000</strong></td>
 </tr>
 <tr>
   <td>xbd-wd</td>
   <td>800</td>
-  <td>Extra Bold (Ultra Bold)</td>
+  <td>Expanded Extra Bold (Ultra Bold)</td>
   <td>MA</td>
-  <td>3.000</td>
+  <td><strong>4.001</strong></td>
 </tr>
 <tr>
   <td>blk-wd</td>
   <td>900</td>
-  <td>Black (Heavy)</td>
+  <td>Expanded Black (Heavy)</td>
   <td>MG</td>
   <td><strong>4.000</strong></td>
 </tr>
@@ -812,14 +940,14 @@
   <td>200</td>
   <td>Italic Extra Light (Ultra Light)</td>
   <td>MA</td>
-  <td>3.000</td>
+  <td><strong>4.001</strong></td>
 </tr>
 <tr>
   <td>lgt-it</td>
   <td>300</td>
   <td>Italic Light</td>
   <td>MA</td>
-  <td>3.000</td>
+  <td><strong>4.001</strong></td>
 </tr>
 <tr>
   <td>reg-it</td>
@@ -833,14 +961,14 @@
   <td>500</td>
   <td>Italic Medium</td>
   <td>MA</td>
-  <td>3.000</td>
+  <td><strong>4.001</strong></td>
 </tr>
 <tr>
   <td>smb-it</td>
   <td>600</td>
   <td>Italic Semi Bold (Demi Bold)</td>
   <td>MA</td>
-  <td>3.000</td>
+  <td><strong>4.001</strong></td>
 </tr>
 <tr>
   <td>bld-it</td>
@@ -854,7 +982,7 @@
   <td>800</td>
   <td>Extra Bold (Ultra Bold)</td>
   <td>MA</td>
-  <td>3.000</td>
+  <td><strong>4.001</strong></td>
 </tr>
 <tr>
   <td>blk-it</td>
@@ -866,63 +994,63 @@
 <tr>
   <td>thn-wd-it</td>
   <td>100</td>
-  <td>Italic Thin (Hairline)</td>
+  <td>Expanded Italic Thin (Hairline)</td>
   <td>MG</td>
   <td><strong>4.000</strong></td>
 </tr>
 <tr>
   <td>xlg-wd-it</td>
   <td>200</td>
-  <td>Italic Extra Light (Ultra Light)</td>
+  <td>Expanded Italic Extra Light (Ultra Light)</td>
   <td>MA</td>
-  <td>3.000</td>
+  <td><strong>4.001</strong></td>
 </tr>
 <tr>
   <td>lgt-wd-it</td>
   <td>300</td>
-  <td>Italic Light</td>
+  <td>Expanded Italic Light</td>
   <td>MA</td>
-  <td>3.000</td>
+  <td><strong>4.001</strong></td>
 </tr>
 <tr>
   <td>reg-wd-it</td>
   <td>400</td>
-  <td>Italic Regular</td>
+  <td>Expanded Italic Regular</td>
   <td>MG</td>
   <td><strong>4.000</strong></td>
 </tr>
 <tr>
   <td>med-wd-it</td>
   <td>500</td>
-  <td>Italic Medium</td>
+  <td>Expanded Italic Medium</td>
   <td>MA</td>
-  <td>3.000</td>
+  <td><strong>4.001</strong></td>
 </tr>
 <tr>
   <td>smb-wd-it</td>
   <td>600</td>
-  <td>Italic Semi Bold (Demi Bold)</td>
+  <td>Expanded Italic Semi Bold (Demi Bold)</td>
   <td>MA</td>
-  <td>3.000</td>
+  <td><strong>4.001</strong></td>
 </tr>
 <tr>
   <td>bld-wd-it</td>
   <td>700</td>
-  <td>Italic Bold</td>
+  <td>Expanded Italic Bold</td>
   <td>MG</td>
   <td><strong>4.000</strong></td>
 </tr>
 <tr>
   <td>xbd-wd-it</td>
   <td>800</td>
-  <td>Extra Bold (Ultra Bold)</td>
+  <td>Expanded Extra Bold (Ultra Bold)</td>
   <td>MA</td>
-  <td>3.000</td>
+  <td><strong>4.001</strong></td>
 </tr>
 <tr>
   <td>blk-wd-it</td>
   <td>900</td>
-  <td>Black (Heavy)</td>
+  <td>Expanded Black (Heavy)</td>
   <td>MG</td>
   <td><strong>4.000</strong></td>
 </tr>
@@ -930,6 +1058,116 @@
 </table>
 
 <h4>Axes</h4>
+
+<p>Weight:</p>
+
+<table>
+<thead>
+<tr>
+  <th>Value</th>
+  <th>Name</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+  <td>100</td>
+  <td>Thin</td>
+</tr>
+<tr>
+  <td>200</td>
+  <td>Extra Light</td>
+</tr>
+<tr>
+  <td>300</td>
+  <td>Light</td>
+</tr>
+<tr>
+  <td>400</td>
+  <td>Regular</td>
+</tr>
+<tr>
+  <td>500</td>
+  <td>Medium</td>
+</tr>
+<tr>
+  <td>600</td>
+  <td>Semi Bold</td>
+</tr>
+<tr>
+  <td>700</td>
+  <td>Bold</td>
+</tr>
+<tr>
+  <td>800</td>
+  <td>Extra Bold</td>
+</tr>
+<tr>
+  <td>900</td>
+  <td>Black</td>
+</tr>
+</tbody>
+</table>
+
+<p>Italic:</p>
+
+<table>
+<thead>
+<tr>
+  <th>Value</th>
+  <th>Name</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+  <td>0</td>
+  <td>Plain</td>
+</tr>
+<tr>
+  <td>1</td>
+  <td>Italic</td>
+</tr>
+</tbody>
+</table>
+
+<p>Width:</p>
+
+<table>
+<thead>
+<tr>
+  <th>Value</th>
+  <th>Name</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+  <td>100</td>
+  <td>Normal</td>
+</tr>
+<tr>
+  <td>200</td>
+  <td>Expanded</td>
+</tr>
+</tbody>
+</table>
+
+<p>Axes Design Parameters</p>
+
+<pre><code>Weight:
+
+Thin=100, "Extra Light"=200, Light=300, (Regular)=400, Medium=500, "Semi Bold"=600, Bold=700, "Extra Bold"=800, Black=900
+
+Italic:
+
+(Plain)=0, Italic=1
+
+Width:
+
+(Normal)=100, Expanded=200
+
+
+</code></pre>
+
+<p>Variable Flavors</p>
 
 <table>
 <thead>
@@ -969,14 +1207,6 @@
 </tr>
 </tbody>
 </table>
-
-<hr />
-
-<p>An example of what we are planning in terms of the new Black MO (Original Master) and new Wide MO. The wide version is planned to be <strong>150% Wider</strong> compared to the current normal and the black version is planned to be <strong>60% Bolder</strong> compared to the current bold.</p>
-
-<p><img src="assets/media/adv_mo_mg.svg" alt="adv<em>nrm</em>wde<em>bld</em>blk" /></p>
-
-<p>image: #002, 0.002, svg, Advent MO and MG Masters.</p>
 
 <hr />
 
@@ -1083,9 +1313,11 @@ Small Case and Capitals are also non intruding. This increases size minimally bu
 <li>Ommited:
 <ul>
 <li>Cross Language System Kerning (grek to latn and latn to grek).</li>
-<li>Greek "sigma1" on the Left Side for all grek.</li>
+<li>Greek "sigma1" on the Left Side for all Greek.</li>
 </ul></li>
 </ul>
+
+<p>Version &gt;4.000 is pending Cyrillic Kerning.</p>
 
 <hr />
 
@@ -1261,7 +1493,7 @@ later you can export to Componentized UFOs.</p>
 
 <p><a href="https://github.com/VivaRado/Advent/blob/master/font_source/UFOs">All the above files are available here</a>.</p>
 
-<p>To keep things simple for the initial release, we don't generate intermediate instances as standalone OTFs, this brings the total of available weights deriging from only the masters to 16.</p>
+<p>To keep things simple for the initial release, we don't generate intermediate instances as standalone OTFs, this brings the total of available weights deriving from only the masters to 16. If any intermediate instances offered are present they may be lagging behind those main 16. The available OTF files are 16 for Standard release and 36 for Extended Realease. For all other formats we offer only the standard release.</p>
 
 <hr />
 
@@ -1859,7 +2091,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#x61;&#x69;&#x6c;&#x74;&#x6f;&#x3a;&#115;&#117;&#x70;&#x70;&#x6f;&#114;&#116;&#x40;&#118;&#105;&#118;&#x61;&#114;&#x61;&#100;&#x6f;.&#x63;&#x6f;&#109;">&#115;&#117;&#x70;&#x70;&#x6f;&#114;&#116;&#x40;&#118;&#105;&#118;&#x61;&#114;&#x61;&#100;&#x6f;.&#x63;&#x6f;&#109;</a></li>
+<li><a href="&#x6d;&#x61;&#105;&#108;t&#x6f;&#58;&#115;u&#112;&#x70;&#111;&#114;&#116;&#x40;&#118;&#x69;va&#114;&#97;d&#x6f;&#x2e;&#99;o&#x6d;">&#115;u&#112;&#x70;&#111;&#114;&#116;&#x40;&#118;&#x69;va&#114;&#97;d&#x6f;&#x2e;&#99;o&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
