Extended 54, Standard 16, Doc Update

--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 4.001 | 2021/02/10</title>
+		<title>VRD | Advent | 4.001 | 2021/02/11</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="m&#97;&#105;&#108;t&#111;&#x3a;&#115;&#117;&#112;&#112;&#x6f;&#x72;&#x74;&#x40;&#x76;&#105;&#x76;&#x61;&#114;&#97;&#100;&#111;&#46;&#x63;&#x6f;&#x6d;">&#115;&#117;&#112;&#112;&#x6f;&#x72;&#x74;&#x40;&#x76;&#105;&#x76;&#x61;&#114;&#97;&#100;&#111;&#46;&#x63;&#x6f;&#x6d;</a></li>
+<li>VivaRado <a href="&#109;&#97;&#105;l&#116;&#x6f;:s&#x75;&#x70;&#x70;&#x6f;&#x72;&#x74;&#x40;&#118;&#x69;&#x76;&#97;&#114;&#x61;&#100;&#x6f;&#x2e;&#99;&#111;&#109;">s&#x75;&#x70;&#x70;&#x6f;&#x72;&#x74;&#x40;&#118;&#x69;&#x76;&#97;&#114;&#x61;&#100;&#x6f;&#x2e;&#99;&#111;&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#97;&#x69;&#108;&#116;&#111;&#58;&#x6d;&#x6a;&#x6c;&#x61;&#103;a&#x74;&#116;&#117;t&#x61;&#64;&#x67;&#109;&#97;i&#108;&#x2e;&#x63;&#x6f;m">&#x6d;&#x6a;&#x6c;&#x61;&#103;a&#x74;&#116;&#117;t&#x61;&#64;&#x67;&#109;&#97;i&#108;&#x2e;&#x63;&#x6f;m</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#97;i&#x6c;&#x74;&#x6f;&#x3a;&#x6d;&#x6a;&#108;&#x61;&#103;&#x61;&#116;&#116;&#x75;&#x74;&#97;&#64;&#103;&#109;a&#x69;&#x6c;&#x2e;&#99;&#x6f;&#109;">&#x6d;&#x6a;&#108;&#x61;&#103;&#x61;&#116;&#116;&#x75;&#x74;&#97;&#64;&#103;&#109;a&#x69;&#x6c;&#x2e;&#99;&#x6f;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -705,28 +705,28 @@
 <tr>
   <td>thn-wd</td>
   <td>100</td>
-  <td>Expanded Thin (Hairline)</td>
+  <td>Ultra Expanded Thin (Hairline)</td>
   <td>MG</td>
   <td><strong>4.000</strong></td>
 </tr>
 <tr>
   <td>reg-wd</td>
   <td>400</td>
-  <td>Expanded Regular</td>
+  <td>Ultra Expanded Regular</td>
   <td>MG</td>
   <td><strong>4.000</strong></td>
 </tr>
 <tr>
   <td>bld-wd</td>
   <td>700</td>
-  <td>Expanded Bold</td>
+  <td>Ultra Expanded Bold</td>
   <td>MG</td>
   <td><strong>4.000</strong></td>
 </tr>
 <tr>
   <td>blk-wd</td>
   <td>900</td>
-  <td>Expanded Black (Heavy)</td>
+  <td>Ultra Expanded Black (Heavy)</td>
   <td>MG</td>
   <td><strong>4.000</strong></td>
 </tr>
@@ -761,28 +761,28 @@
 <tr>
   <td>thn-wd-it</td>
   <td>100</td>
-  <td>Expanded Italic Thin (Hairline)</td>
+  <td>Ultra Expanded Italic Thin (Hairline)</td>
   <td>MG</td>
   <td><strong>4.000</strong></td>
 </tr>
 <tr>
   <td>reg-wd-it</td>
   <td>400</td>
-  <td>Expanded Italic Regular</td>
+  <td>Ultra Expanded Italic Regular</td>
   <td>MG</td>
   <td><strong>4.000</strong></td>
 </tr>
 <tr>
   <td>bld-wd-it</td>
   <td>700</td>
-  <td>Expanded Italic Bold</td>
+  <td>Ultra Expanded Italic Bold</td>
   <td>MG</td>
   <td><strong>4.000</strong></td>
 </tr>
 <tr>
   <td>blk-wd-it</td>
   <td>900</td>
-  <td>Expanded Black (Heavy)</td>
+  <td>Ultra Expanded Black (Heavy)</td>
   <td>MG</td>
   <td><strong>4.000</strong></td>
 </tr>
@@ -866,65 +866,128 @@
   <td><strong>4.000</strong></td>
 </tr>
 <tr>
-  <td>thn-wd</td>
+  <td>thn-ex</td>
   <td>100</td>
   <td>Expanded Thin (Hairline)</td>
   <td>MG</td>
   <td><strong>4.000</strong></td>
 </tr>
 <tr>
-  <td>xlg-wd</td>
+  <td>xlg-ex</td>
   <td>200</td>
   <td>Expanded Extra Light (Ultra Light)</td>
   <td>MA</td>
   <td><strong>4.001</strong></td>
 </tr>
 <tr>
-  <td>lgt-wd</td>
+  <td>lgt-ex</td>
   <td>300</td>
   <td>Expanded Light</td>
   <td>MA</td>
   <td><strong>4.001</strong></td>
 </tr>
 <tr>
-  <td>reg-wd</td>
+  <td>reg-ex</td>
   <td>400</td>
   <td>Expanded Regular</td>
   <td>MG</td>
   <td><strong>4.000</strong></td>
 </tr>
 <tr>
-  <td>med-wd</td>
+  <td>med-ex</td>
   <td>500</td>
   <td>Expanded Medium</td>
   <td>MA</td>
   <td><strong>4.001</strong></td>
 </tr>
 <tr>
-  <td>smb-wd</td>
+  <td>smb-ex</td>
   <td>600</td>
   <td>Expanded Semi Bold (Demi Bold)</td>
   <td>MA</td>
   <td><strong>4.001</strong></td>
 </tr>
 <tr>
-  <td>bld-wd</td>
+  <td>bld-ex</td>
   <td>700</td>
   <td>Expanded Bold</td>
   <td>MG</td>
   <td><strong>4.000</strong></td>
 </tr>
 <tr>
-  <td>xbd-wd</td>
+  <td>xbd-ex</td>
   <td>800</td>
   <td>Expanded Extra Bold (Ultra Bold)</td>
   <td>MA</td>
   <td><strong>4.001</strong></td>
 </tr>
 <tr>
-  <td>blk-wd</td>
+  <td>blk-ex</td>
   <td>900</td>
   <td>Expanded Black (Heavy)</td>
+  <td>MG</td>
+  <td><strong>4.000</strong></td>
+</tr>
+<tr>
+  <td>thn-ux</td>
+  <td>100</td>
+  <td>Ultra Expanded Thin (Hairline)</td>
+  <td>MG</td>
+  <td><strong>4.000</strong></td>
+</tr>
+<tr>
+  <td>xlg-ux</td>
+  <td>200</td>
+  <td>Ultra Expanded Extra Light (Ultra Light)</td>
+  <td>MA</td>
+  <td><strong>4.001</strong></td>
+</tr>
+<tr>
+  <td>lgt-ux</td>
+  <td>300</td>
+  <td>Ultra Expanded Light</td>
+  <td>MA</td>
+  <td><strong>4.001</strong></td>
+</tr>
+<tr>
+  <td>reg-ux</td>
+  <td>400</td>
+  <td>Ultra Expanded Regular</td>
+  <td>MG</td>
+  <td><strong>4.000</strong></td>
+</tr>
+<tr>
+  <td>med-ux</td>
+  <td>500</td>
+  <td>Ultra Expanded Medium</td>
+  <td>MA</td>
+  <td><strong>4.001</strong></td>
+</tr>
+<tr>
+  <td>smb-ux</td>
+  <td>600</td>
+  <td>Ultra Expanded Semi Bold (Demi Bold)</td>
+  <td>MA</td>
+  <td><strong>4.001</strong></td>
+</tr>
+<tr>
+  <td>bld-ux</td>
+  <td>700</td>
+  <td>Ultra Expanded Bold</td>
+  <td>MG</td>
+  <td><strong>4.000</strong></td>
+</tr>
+<tr>
+  <td>xbd-ux</td>
+  <td>800</td>
+  <td>Ultra Expanded Extra Bold (Ultra Bold)</td>
+  <td>MA</td>
+  <td><strong>4.001</strong></td>
+</tr>
+<tr>
+  <td>blk-ux</td>
+  <td>900</td>
+  <td>Ultra Expanded Black (Heavy)</td>
   <td>MG</td>
   <td><strong>4.000</strong></td>
 </tr>
@@ -992,65 +1055,128 @@
   <td><strong>4.000</strong></td>
 </tr>
 <tr>
-  <td>thn-wd-it</td>
+  <td>thn-ex-it</td>
   <td>100</td>
   <td>Expanded Italic Thin (Hairline)</td>
   <td>MG</td>
   <td><strong>4.000</strong></td>
 </tr>
 <tr>
-  <td>xlg-wd-it</td>
+  <td>xlg-ex-it</td>
   <td>200</td>
   <td>Expanded Italic Extra Light (Ultra Light)</td>
   <td>MA</td>
   <td><strong>4.001</strong></td>
 </tr>
 <tr>
-  <td>lgt-wd-it</td>
+  <td>lgt-ex-it</td>
   <td>300</td>
   <td>Expanded Italic Light</td>
   <td>MA</td>
   <td><strong>4.001</strong></td>
 </tr>
 <tr>
-  <td>reg-wd-it</td>
+  <td>reg-ex-it</td>
   <td>400</td>
   <td>Expanded Italic Regular</td>
   <td>MG</td>
   <td><strong>4.000</strong></td>
 </tr>
 <tr>
-  <td>med-wd-it</td>
+  <td>med-ex-it</td>
   <td>500</td>
   <td>Expanded Italic Medium</td>
   <td>MA</td>
   <td><strong>4.001</strong></td>
 </tr>
 <tr>
-  <td>smb-wd-it</td>
+  <td>smb-ex-it</td>
   <td>600</td>
   <td>Expanded Italic Semi Bold (Demi Bold)</td>
   <td>MA</td>
   <td><strong>4.001</strong></td>
 </tr>
 <tr>
-  <td>bld-wd-it</td>
+  <td>bld-ex-it</td>
   <td>700</td>
   <td>Expanded Italic Bold</td>
   <td>MG</td>
   <td><strong>4.000</strong></td>
 </tr>
 <tr>
-  <td>xbd-wd-it</td>
+  <td>xbd-ex-it</td>
   <td>800</td>
   <td>Expanded Extra Bold (Ultra Bold)</td>
   <td>MA</td>
   <td><strong>4.001</strong></td>
 </tr>
 <tr>
-  <td>blk-wd-it</td>
+  <td>blk-ex-it</td>
   <td>900</td>
   <td>Expanded Black (Heavy)</td>
+  <td>MG</td>
+  <td><strong>4.000</strong></td>
+</tr>
+<tr>
+  <td>thn-ux-it</td>
+  <td>100</td>
+  <td>Ultra Expanded Italic Thin (Hairline)</td>
+  <td>MG</td>
+  <td><strong>4.000</strong></td>
+</tr>
+<tr>
+  <td>xlg-ux-it</td>
+  <td>200</td>
+  <td>Ultra Expanded Italic Extra Light (Ultra Light)</td>
+  <td>MA</td>
+  <td><strong>4.001</strong></td>
+</tr>
+<tr>
+  <td>lgt-ux-it</td>
+  <td>300</td>
+  <td>Ultra Expanded Italic Light</td>
+  <td>MA</td>
+  <td><strong>4.001</strong></td>
+</tr>
+<tr>
+  <td>reg-ux-it</td>
+  <td>400</td>
+  <td>Ultra Expanded Italic Regular</td>
+  <td>MG</td>
+  <td><strong>4.000</strong></td>
+</tr>
+<tr>
+  <td>med-ux-it</td>
+  <td>500</td>
+  <td>Ultra Expanded Italic Medium</td>
+  <td>MA</td>
+  <td><strong>4.001</strong></td>
+</tr>
+<tr>
+  <td>smb-ux-it</td>
+  <td>600</td>
+  <td>Ultra Expanded Italic Semi Bold (Demi Bold)</td>
+  <td>MA</td>
+  <td><strong>4.001</strong></td>
+</tr>
+<tr>
+  <td>bld-ux-it</td>
+  <td>700</td>
+  <td>Ultra Expanded Italic Bold</td>
+  <td>MG</td>
+  <td><strong>4.000</strong></td>
+</tr>
+<tr>
+  <td>xbd-ux-it</td>
+  <td>800</td>
+  <td>Ultra Expanded Extra Bold (Ultra Bold)</td>
+  <td>MA</td>
+  <td><strong>4.001</strong></td>
+</tr>
+<tr>
+  <td>blk-ux-it</td>
+  <td>900</td>
+  <td>Ultra Expanded Black (Heavy)</td>
   <td>MG</td>
   <td><strong>4.000</strong></td>
 </tr>
@@ -1493,7 +1619,7 @@ later you can export to Componentized UFOs.</p>
 
 <p><a href="https://github.com/VivaRado/Advent/blob/master/font_source/UFOs">All the above files are available here</a>.</p>
 
-<p>To keep things simple for the initial release, we don't generate intermediate instances as standalone OTFs, this brings the total of available weights deriving from only the masters to 16. If any intermediate instances offered are present they may be lagging behind those main 16. The available OTF files are 16 for Standard release and 36 for Extended Realease. For all other formats we offer only the standard release.</p>
+<p>To keep things simple for the initial release, we don't generate intermediate instances as standalone OTFs, this brings the total of available weights deriving from only the masters to 16. If any intermediate instances offered are present they may be lagging behind those main 16. The available OTF files are 16 for Standard release and 54 for Extended Realease. For all other formats we offer only the standard release.</p>
 
 <hr />
 
@@ -2091,7 +2217,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#x61;&#105;&#108;t&#x6f;&#58;&#115;u&#112;&#x70;&#111;&#114;&#116;&#x40;&#118;&#x69;va&#114;&#97;d&#x6f;&#x2e;&#99;o&#x6d;">&#115;u&#112;&#x70;&#111;&#114;&#116;&#x40;&#118;&#x69;va&#114;&#97;d&#x6f;&#x2e;&#99;o&#x6d;</a></li>
+<li><a href="&#x6d;&#97;i&#x6c;&#x74;&#111;&#x3a;&#115;&#117;&#x70;&#112;&#111;&#114;&#116;&#64;&#x76;&#105;&#x76;&#97;&#114;&#97;&#x64;&#x6f;.&#x63;&#x6f;&#x6d;">&#115;&#117;&#x70;&#112;&#111;&#114;&#116;&#64;&#x76;&#105;&#x76;&#97;&#114;&#97;&#x64;&#x6f;.&#x63;&#x6f;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
